# itech_naloga

./: .gitignore  README.md
client/: CMakeLists.txt  c_file.c  c_file.h  c_gui.c  c_gui.h  c_includes.c  c_includes.h  c_output.c  c_output.h  c_queue.c  c_queue.h  c_receiver.c  client  client.c  raygui.h  tests.cc
client/apps/: CMakeLists.txt  client.c
client/includes/: c_file.h  c_gui.h  c_includes.h  c_output.h  c_queue.h  c_receiver.h
client/src/: CMakeLists.txt  c_file.c  c_gui.c  c_includes.c  c_output.c  c_queue.c  c_receiver.c  client.c
client/tests/: CMakeLists.txt  tests.cc
server/: CMakeLists.txt  server  server.c
